--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 #####################################################################
 # PROJECT FILES
 #####################################################################
-
+secret.js
 
 
 #####################################################################
