--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Update trello stocks",
   "main": "src/index.js",
   "scripts": {
+    "stocks": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
