Add robinhood data

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # PROJECT FILES
 #####################################################################
 secret.js
-dump
+data/trello
 
 #####################################################################
 # JAVASCRIPT SPECIFIC
