Removed secrets and update board

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 #####################################################################
 secret.js
 data/trello
+.env
 
 #####################################################################
 # JAVASCRIPT SPECIFIC
