--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "web": "node index.js",
-    "update-board": "node server/scripts/update-board.js",
+    "update-board": "node bin/update-board.js",
     "test": "jest"
   },
   "engines": {
