--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "web": "node index.js",
+    "job:update-board": "node job/update-board.js",
     "update-board": "node bin/update-board.js",
     "test": "jest"
   },
