Replacing .env file with secrets.json for crontab

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 #####################################################################
 # PROJECT FILES
 #####################################################################
-secret.js
+secrets.json
 data/trello
 .env
 
